# aiffel-1

deep-learning/: ch1.ipynb  pyproject.toml
deep-learning-with-python-2nd/: chapter04_getting-started-with-neural-networks.ipynb
keras-deeplearning/: README.md  bike_sharing_demand.ipynb  diabetes.ipynb  function-api.ipynb  keras.ipynb  requirements.txt  tip_scikit_learn.ipynb
keras-deeplearning/240527_pokemon/: README.md  pokemon.ipynb  pyproject.toml
keras-deeplearning/240528_playground/: README.md
keras-deeplearning/240529_kaggle/: 2019-ml-month-2nd-baseline.ipynb  README.md  kaggle.ipynb  pyproject.toml  submission.csv
keras-deeplearning/240604_face_detection/: .gitignore  240604-crown.ipynb  240604-selfie-whiskers.ipynb  README.md
keras-deeplearning/human_segmentation/: 240605_human_segmentation.ipynb  README.md  pyproject.toml
keras-deeplearning/news_summary/: 240613_news_summary.ipynb  README.md
keras-deeplearning/sentiment_classification/: .gitignore  240612_sentiment_classification.ipynb  README.md  pyproject.toml
markdown/: README.md
