[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["thilllon <thilllon970@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
