[tool.poetry]
name = "240529-kaggle"
version = "0.1.0"
description = ""
authors = ["thilllon <thilllon970@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightgbm = "^4.3.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
xgboost = "^2.0.3"
missingno = "^0.5.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
