[tool.poetry]
name = "human-segmentation"
version = "0.1.0"
description = ""
authors = ["thilllon <thilllon970@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
opencv-python = "^4.10.0.82"
pycocotools = "^2.0.7"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
