[tool.poetry]
name = "sentiment-classification"
version = "0.1.0"
description = ""
authors = ["thilllon <thilllon970@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
konlpy = "^0.6.0"
pandas = "^2.2.2"
gensim = "^4.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
